Update deployment workflow - add continue-on-error for production deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -194,6 +194,7 @@ jobs:
     needs: [build, security-audit]
     if: github.ref == 'refs/heads/main'
     environment: production
+    continue-on-error: true
     
     steps:
       - name: Checkout code
