--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,56 +5,43 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  workflow_dispatch:
 
 env:
-  NODE_VERSION: '18'
+  NODE_VERSION: '20'
 
 jobs:
-  # Lint and Type Check
   lint-and-type-check:
-    name: Lint and Type Check
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+      
       - name: Install dependencies
         run: npm ci
-        
-      - name: Setup environment for linting
-        run: |
-          echo "DATABASE_URL=postgresql://test:test@localhost:5432/test" >> .env
-          echo "JWT_SECRET=test-secret-key-for-linting" >> .env
-          echo "NODE_ENV=test" >> .env
-          
-      - name: Generate Prisma client
-        run: npx prisma generate
-        
+      
       - name: Run ESLint
         run: npm run lint
-        
+      
       - name: Type check
-        run: npx tsc --noEmit
+        run: npm run type-check
+        env:
+          DATABASE_URL: "postgresql://dummy:dummy@localhost:5432/dummy"
+          JWT_SECRET: "dummy-secret"
 
-  # Test
   test:
-    name: Test
     runs-on: ubuntu-latest
-    needs: lint-and-type-check
-    
     services:
       postgres:
         image: postgres:15
         env:
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: hotel_management_test
+          POSTGRES_DB: test_db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -62,123 +49,87 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+      
       - name: Install dependencies
         run: npm ci
-        
-      - name: Setup test environment
-        run: |
-          echo "DATABASE_URL=postgresql://postgres:postgres@localhost:5432/hotel_management_test" >> .env
-          echo "JWT_SECRET=test-secret-key" >> .env
-          echo "NODE_ENV=test" >> .env
-          
+      
       - name: Generate Prisma client
-        run: npx prisma generate
-        
-      - name: Run database migrations
-        run: npx prisma db push
-        
-      - name: Run tests
-        run: npm test
+        run: npm run db:generate
         env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/hotel_management_test
+          DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/test_db"
+      
+      - name: Run database migrations
+        run: npm run db:push
+        env:
+          DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/test_db"
+      
+      - name: Run tests
+        run: npm run test
+        env:
+          DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/test_db"
+          JWT_SECRET: "test-secret"
 
-  # Build
   build:
-    name: Build
     runs-on: ubuntu-latest
     needs: [lint-and-type-check, test]
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+      
       - name: Install dependencies
         run: npm ci
-        
-      - name: Setup environment for build
-        run: |
-          echo "DATABASE_URL=postgresql://test:test@localhost:5432/test" >> .env
-          echo "JWT_SECRET=test-secret-key-for-build" >> .env
-          echo "NODE_ENV=production" >> .env
-          
+      
       - name: Generate Prisma client
-        run: npx prisma generate
-        
+        run: npm run db:generate
+        env:
+          DATABASE_URL: "postgresql://dummy:dummy@localhost:5432/dummy"
+          JWT_SECRET: "dummy-secret"
+      
       - name: Build application
         run: npm run build
-        
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-files
-          path: .next/
-          retention-days: 1
+        env:
+          DATABASE_URL: "postgresql://dummy:dummy@localhost:5432/dummy"
+          JWT_SECRET: "dummy-secret"
 
-  # Security audit
   security-audit:
-    name: Security Audit
     runs-on: ubuntu-latest
-    
+    needs: [lint-and-type-check, test]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+      
       - name: Install dependencies
         run: npm ci
-        
+      
       - name: Run security audit
-        run: npm audit --audit-level=moderate
+        run: npm audit --audit-level moderate
 
-  # Deploy to staging (on develop branch)
   deploy-staging:
-    name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: [build, security-audit]
     if: github.ref == 'refs/heads/develop'
     environment: staging
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Generate Prisma client
-        run: npx prisma generate
-        
-      - name: Build application
-        run: npm run build
-        
+      - uses: actions/checkout@v4
+      
       - name: Deploy to Vercel (Staging)
         uses: amondnet/vercel-action@v25
         with:
@@ -187,34 +138,15 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'
 
-  # Deploy to production (on main branch)
   deploy-production:
-    name: Deploy to Production
     runs-on: ubuntu-latest
     needs: [build, security-audit]
     if: github.ref == 'refs/heads/main'
     environment: production
     continue-on-error: true
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          
-      - name: Install dependencies
-        run: npm ci
-        
-      - name: Generate Prisma client
-        run: npx prisma generate
-        
-      - name: Build application
-        run: npm run build
-        
+      - uses: actions/checkout@v4
+      
       - name: Deploy to Vercel (Production)
         uses: amondnet/vercel-action@v25
         with:
