--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,11 +126,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, security-audit]
     if: github.ref == 'refs/heads/develop'
-    environment: staging
+    environment: 
+      name: staging
+      url: ${{ steps.deploy.outputs.url }}
     steps:
       - uses: actions/checkout@v4
       
       - name: Deploy to Vercel (Staging)
+        id: deploy
         uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
@@ -142,12 +145,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build, security-audit]
     if: github.ref == 'refs/heads/main'
-    environment: production
-    continue-on-error: true
+    environment: 
+      name: production
+      url: ${{ steps.deploy.outputs.url }}
     steps:
       - uses: actions/checkout@v4
       
       - name: Deploy to Vercel (Production)
+        id: deploy
         uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
