--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:unit": "jest --testPathPattern=src/__tests__/auth.test.ts",
+    "test:integration": "jest --testPathPattern=src/__tests__/integration.test.ts",
     "type-check": "tsc --noEmit",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
