I clean up the app but not satisfy yet

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:migrate-refunds": "node scripts/migrate-existing-refunds.js",
     "postinstall": "prisma generate"
   },
   "dependencies": {
