I have a cool system now

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@stripe/react-stripe-js": "^3.9.0",
     "@stripe/stripe-js": "^7.8.0",
     "@types/bcryptjs": "^2.4.6",
@@ -33,8 +35,12 @@
     "@types/nodemailer": "^6.4.17",
     "@types/stripe": "^8.0.416",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.534.0",
     "next": "15.4.5",
     "nodemailer": "^7.0.5",
@@ -43,6 +49,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "stripe": "^18.4.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14"
   },
   "devDependencies": {
