--- a/env.template
+++ b/env.template
@@ -1,19 +1,139 @@
-# Copy this file to .env.local and fill in your actual values
+# ========================================
+# 🚀 Hotel Management System Environment
+# ========================================
+# Copy this file to .env.local and fill in your values
 
-# Database Configuration
-DATABASE_URL=postgresql://macbookpro@localhost:5432/hotel_management?schema=public
+# ========================================
+# 🌍 Application Configuration
+# ========================================
+NODE_ENV=development
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_NAME=Hotel Management System
 
-# JWT Configuration
-JWT_SECRET=dev-secret-change-me
+# ========================================
+# 🗄️ Database Configuration
+# ========================================
+# Development Database
+DATABASE_URL="postgresql://username:password@localhost:5432/hotel_management_dev"
 
-# Stripe Configuration (Required for payment functionality)
-# Get these from: https://dashboard.stripe.com/apikeys
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
-STRIPE_SECRET_KEY=sk_test_your_secret_key_here
+# Test Database (for CI/CD)
+DATABASE_URL_TEST="postgresql://postgres:postgres@localhost:5432/test_db"
+
+# Production Database (set in Vercel)
+# DATABASE_URL="postgresql://username:password@production-host:5432/hotel_management_prod"
+
+# ========================================
+# 🔐 Authentication & Security
+# ========================================
+JWT_SECRET=your-super-secret-jwt-key-here
+JWT_EXPIRES_IN=7d
+NEXTAUTH_SECRET=your-nextauth-secret-here
+NEXTAUTH_URL=http://localhost:3000
+
+# ========================================
+# 💳 Stripe Configuration
+# ========================================
+# Stripe Publishable Key (public)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+
+# Stripe Secret Key (private - never commit to git)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+
+# Stripe Webhook Secret
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# Email Configuration (Optional - for email notifications)
+# ========================================
+# 📧 Email Configuration
+# ========================================
+# SMTP Configuration
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_password
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password-here
+
+# Email Templates
+EMAIL_FROM=noreply@yourhotel.com
+EMAIL_REPLY_TO=support@yourhotel.com
+
+# ========================================
+# 📊 Analytics & Monitoring
+# ========================================
+# Google Analytics (optional)
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+
+# Sentry (error tracking - optional)
+NEXT_PUBLIC_SENTRY_DSN=https://your-sentry-dsn.ingest.sentry.io/123456
+
+# ========================================
+# 🔍 Development Tools
+# ========================================
+# Enable debug logging
+DEBUG=app:*,prisma:*
+
+# Enable Prisma Studio
+PRISMA_STUDIO_PORT=5555
+
+# ========================================
+# 🚀 CI/CD Configuration
+# ========================================
+# These are set automatically by GitHub Actions
+# VERCEL_TOKEN=your_vercel_token
+# VERCEL_ORG_ID=your_org_id
+# VERCEL_PROJECT_ID=your_project_id
+
+# ========================================
+# 🧪 Testing Configuration
+# ========================================
+# Test-specific environment variables
+NODE_ENV=test
+JWT_SECRET=test-jwt-secret
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/test_db"
+
+# ========================================
+# 📱 Feature Flags
+# ========================================
+# Enable/disable features
+NEXT_PUBLIC_ENABLE_PAYMENTS=true
+NEXT_PUBLIC_ENABLE_REVIEWS=true
+NEXT_PUBLIC_ENABLE_NOTIFICATIONS=true
+
+# ========================================
+# 🔒 Security Headers
+# ========================================
+# Content Security Policy
+NEXT_PUBLIC_CSP_NONCE=your-csp-nonce-here
+
+# ========================================
+# 🌐 Internationalization
+# ========================================
+# Default language
+NEXT_PUBLIC_DEFAULT_LOCALE=en
+NEXT_PUBLIC_SUPPORTED_LOCALES=en,es,fr
+
+# ========================================
+# 📈 Performance
+# ========================================
+# Enable performance monitoring
+NEXT_PUBLIC_ENABLE_PERFORMANCE_MONITORING=true
+
+# ========================================
+# 🚨 Important Notes
+# ========================================
+# 1. NEVER commit .env.local to git
+# 2. Use different values for development, staging, and production
+# 3. Keep secrets secure and rotate them regularly
+# 4. Use environment-specific .env files for different deployments
+# 5. Test all environment variables before deployment
+
+# ========================================
+# 📋 Environment Setup Checklist
+# ========================================
+# ✅ Copy this file to .env.local
+# ✅ Fill in your actual values
+# ✅ Test database connection
+# ✅ Verify Stripe keys work
+# ✅ Test email sending
+# ✅ Run the application
+# ✅ Run all tests
+# ✅ Check build process
+# ✅ Verify deployment works
